Fix Text not showing up

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6536,9 +6536,10 @@ h4, .h4 {
 
 h5, .h5 {
   font-size: 1.125rem;
-    color: #1a5a96;
     font-weight: bold;
 }
+
+
 
 h6, .h6 {
   font-size: 0.9rem;
